finwaiting astrologer requests logic change